<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/searth_filter"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:text="@string/search_scpoe"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/sp_contacts_selelct_users"
            style="@style/spinne_style"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:entries="@array/search_scope_type" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/fdcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_monthly"
                android:textSize="12sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/textbox_times"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textSize="12sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/TextView03111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_times"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_filtrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_filtrate" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/searth_filter_results"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_contacts_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:text="0"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_dotutor_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_filtrate_coach"
            android:onClick="doToturContacats" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/this_mouth_users_count"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/this_mouth_tutor_count"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- <Button -->
        <!-- android:id="@+id/btn_get_contacts" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginBottom="100dp" -->
        <!-- android:layout_marginLeft="100dp" -->
        <!-- android:layout_marginRight="100dp" -->
        <!-- android:layout_marginTop="70dp" -->
        <!-- android:background="@drawable/selector_getdata_button" -->
        <!-- android:onClick="getTutorUsers" -->
        <!-- android:textColor="@color/croci" -->
        <!-- android:textSize="13sp" /> -->

        <ListView
            android:id="@+id/lv_contacts_tutors"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

</LinearLayout>