<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/searth_filter"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:text="@string/search_scpoe"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/sp_orderusers_selelct_users"
            style="@style/spinne_style"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:entries="@array/search_scope_type" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dp"
            android:text="@string/searth_platform"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/sp_select_platform"
            style="@style/spinne_style"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:entries="@array/search_platform" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/fdcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_monthly"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_message_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/textbox_times"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TextView011"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_times"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_filtrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_filtrate"
            android:onClick="filtrateOrderUsers" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fudao_background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/searth_filter_results"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_resout_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:text="0"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_dotutor_orderusers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_filtrate_coach"
            android:onClick="sendMessageOrderUsers" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_orderuser_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:text="本月派单用户"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_orderuser_platform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="手机平台"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_orderuser_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="right|center_vertical"
            android:text="本月派单次数"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_get_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/selector_getdata_button"
            android:onClick="getTutorUsers"
            android:textColor="@color/croci"
            android:textSize="13sp" />

        <ListView
            android:id="@+id/lv_orderusers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>
    </RelativeLayout>

</LinearLayout>